// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformations 1`] = `
Object {
  "caseloadType": "SEX_OFFENSE",
  "displayName": "Duke Ellington",
  "district": "Region D1",
  "externalId": "so1",
  "fullName": Object {
    "givenNames": "Duke",
    "surname": "Ellington",
  },
  "outlierMetrics": Array [
    Object {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": Array [
        Object {
          "endDate": 2023-04-01T00:00:00.000Z,
          "metricRate": 0.098509819,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-05-01T00:00:00.000Z,
          "metricRate": 0.094708509819,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-06-01T00:00:00.000Z,
          "metricRate": 0.0843280708509819,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-07-01T00:00:00.000Z,
          "metricRate": 0.1018842831,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-08-01T00:00:00.000Z,
          "metricRate": 0.11247207457052615,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-09-01T00:00:00.000Z,
          "metricRate": 0.10630035918842831,
          "status": "FAR",
        },
      ],
    },
    Object {
      "metricId": "incarceration_starts",
      "statusesOverTime": Array [
        Object {
          "endDate": 2023-08-01T00:00:00.000Z,
          "metricRate": 0.023395936157938592,
          "status": "MET",
        },
        Object {
          "endDate": 2023-09-01T00:00:00.000Z,
          "metricRate": 0.4331242583488727,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so1",
  "supervisorExternalId": "mdavis123",
}
`;

exports[`transformations 2`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "displayName": "Chet Baker",
  "district": "Region D1",
  "externalId": "so2",
  "fullName": Object {
    "givenNames": "Chet",
    "surname": "Baker",
  },
  "outlierMetrics": Array [],
  "pseudonymizedId": "hashed-so2",
  "supervisorExternalId": "mdavis123",
}
`;

exports[`transformations 3`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "displayName": "Louis Armstrong",
  "district": "Region D1",
  "externalId": "so3",
  "fullName": Object {
    "givenNames": "Louis",
    "surname": "Armstrong",
  },
  "outlierMetrics": Array [
    Object {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": Array [
        Object {
          "endDate": 2023-04-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-05-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-06-01T00:00:00.000Z,
          "metricRate": 0.12125238767544223,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-07-01T00:00:00.000Z,
          "metricRate": 0.1466368227731864,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-08-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-09-01T00:00:00.000Z,
          "metricRate": 0.11521464646464646,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so3",
  "supervisorExternalId": "mdavis123",
}
`;

exports[`transformations 4`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "displayName": "William James \\"Count\\" Basie",
  "district": null,
  "externalId": "so4",
  "fullName": Object {
    "givenNames": "William James",
    "middleNames": "\\"Count\\"",
    "surname": "Basie",
  },
  "outlierMetrics": Array [
    Object {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": Array [
        Object {
          "endDate": 2023-04-01T00:00:00.000Z,
          "metricRate": 0.06283,
          "status": "NEAR",
        },
        Object {
          "endDate": 2023-05-01T00:00:00.000Z,
          "metricRate": 0.088881,
          "status": "NEAR",
        },
        Object {
          "endDate": 2023-06-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-07-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-08-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        Object {
          "endDate": 2023-09-01T00:00:00.000Z,
          "metricRate": 0.1604677745537677,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so4",
  "supervisorExternalId": "bholiday456",
}
`;

exports[`transformations 5`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "displayName": "Mary Lou Williams",
  "district": null,
  "externalId": "so5",
  "fullName": Object {
    "givenNames": "Mary Lou",
    "surname": "Williams",
  },
  "outlierMetrics": Array [],
  "pseudonymizedId": "hashed-so5",
  "supervisorExternalId": "efitzgerald789",
}
`;
